--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ header {
     height: 250px;
     margin: 10px;
     border: 5px rgb(195,229,174) solid;
+    padding: 20px;
 }
 .kuva{
     height: 245px;
