--- a/styles.css
+++ b/styles.css
@@ -12,29 +12,33 @@ header {
     align-items: left;
 }
 
-.col-md-3{
-    display: flex;
-    height: 250px;
-    margin: 10px;
-    border: 5px rgb(195,229,174) solid;
-    padding: 20px;
-}
+
+/* .col-md-3{
+    sisältö laitettu tuonne class..col sisään kokeilu joka toimii!
+} */
+
 .kuva{
     height: 245px;
     width: 300px;
     border: 2px solid rgb(151,219,174);
 }
 
-.button{
-    height: 30px;
-    background-color: rgb(244,187,187);
-    border-radius: 5px;
-}
-
 [class*="col"]{
+    display: none;
+    height: 250px;
+    margin: 10px;
+    padding: 20px;
     border: 5px rgb(195,229,174) solid;
     background-color: rgb(231, 241, 149);
 } 
+
+#aloitusnappi, #seuraava1, #seuraava2, #seuraava3, #seuraava4, #seuraava5, .button{
+    height: 50px;
+    width: 100px;
+    background-color: rgb(244,187,187);
+    border-radius: 5px;
+    font-weight: bolder;
+}
 
 /* #kettu {
    
