--- a/styles.css
+++ b/styles.css
@@ -12,20 +12,24 @@ header {
     align-items: left;
 }
 
+nav {
+    background-color: rgb(151,219,174);
+}
+
 
 /* .col-md-3{
     sisältö laitettu tuonne class..col sisään kokeilu joka toimii!
 } */
 
 .kuva{
-    height: 245px;
+    height: 230px;
     width: 300px;
     border: 2px solid rgb(151,219,174);
 }
 
 [class*="col"]{
     display: none;
-    height: 250px;
+    height: 300px;
     margin: 10px;
     padding: 20px;
     border: 5px rgb(195,229,174) solid;
