--- a/elaintieto.css
+++ b/elaintieto.css
@@ -4,6 +4,7 @@
 
 header {
     display: flex;
+    height: 200px;
     background-color: rgb(151,219,174);
     border: black 2px solid; 
     padding: 10px;
@@ -14,6 +15,9 @@ header {
 
 nav {
     background-color: rgb(151,219,174);
+    height: 10px;
+    width: 10px;
+    
 }
 
 
@@ -25,6 +29,7 @@ nav {
     height: 230px;
     width: 300px;
     border: 2px solid rgb(151,219,174);
+    
 }
 
 [class*="col"]{
@@ -36,13 +41,15 @@ nav {
     background-color: rgb(231, 241, 149);
 } 
 
-#aloitusnappi, #seuraava1, #seuraava2, #seuraava3, #seuraava4, #seuraava5, .button{
+#aloitusnappi, #seuraava1, #seuraava2, #seuraava3, #seuraava4, #seuraava5,.button, #uudestaan{
     height: 50px;
     width: 100px;
     background-color: rgb(244,187,187);
     border-radius: 5px;
     font-weight: bolder;
 }
+
+
 
 /* #kettu {
    
