--- a/elaintieto.css
+++ b/elaintieto.css
@@ -17,31 +17,48 @@ nav {
     background-color: rgb(151,219,174);
     height: 10px;
     width: 10px;
-    
+    float: right;
 }
-
-
-/* .col-md-3{
-    sisältö laitettu tuonne class..col sisään kokeilu joka toimii!
-} */
 
 .kuva{
     height: 230px;
     width: 300px;
     border: 2px solid rgb(151,219,174);
-    
+    margin: 10px;
+    float: left;
 }
 
 [class*="col"]{
     display: none;
     height: 300px;
     margin: 10px;
-    padding: 20px;
+    padding: 10px;
     border: 5px rgb(195,229,174) solid;
     background-color: rgb(231, 241, 149);
 } 
+#progress{ 
+    display: none;
+}
 
-#aloitusnappi, #seuraava1, #seuraava2, #seuraava3, #seuraava4, #seuraava5,.button, #uudestaan{
+#progressBar{
+    height: 30px;
+    width: 250px;
+    border: solid black 1px;
+    border-radius: 3px;
+    display: none;
+    margin: 2px;
+}
+
+.block {
+    height: 28px;
+    width: 48px;
+    background-color: aquamarine;
+    display: none;
+    border-radius: 3px;
+}
+
+#aloitusnappi, #seuraava1, #seuraava2, #seuraava3, 
+#seuraava4, #seuraava5,.button, #uudestaan, #tulos{
     height: 50px;
     width: 100px;
     background-color: rgb(244,187,187);
@@ -49,22 +66,10 @@ nav {
     font-weight: bolder;
 }
 
-
-
-/* #kettu {
-   
-
+.feedback {
+    padding-left: 50px;
 }
-#karhu {
-    
 
+#prize {
+    display: none;
 }
-#orava {
-    
-}
-#jänis {
-    
-}
-#ilves {
-   
-} */
