--- a/elaintieto.css
+++ b/elaintieto.css
@@ -10,14 +10,14 @@ header {
     padding: 10px;
     margin: 3px;
     border-radius: 5px;
-    align-items: left;
+    
 }
 
 nav {
     background-color: rgb(151,219,174);
     height: 10px;
     width: 10px;
-    float: right;
+    display: flex;
 }
 
 .kuva{
@@ -30,7 +30,7 @@ nav {
 
 [class*="col"]{
     display: none;
-    height: 300px;
+    height: 350px;
     margin: 10px;
     padding: 10px;
     border: 5px rgb(195,229,174) solid;
@@ -46,15 +46,14 @@ nav {
     border: solid black 1px;
     border-radius: 3px;
     display: none;
-    margin: 2px;
 }
 
 .block {
     height: 28px;
     width: 48px;
     background-color: aquamarine;
-    display: none;
     border-radius: 3px;
+    display: none;
 }
 
 #aloitusnappi, #seuraava1, #seuraava2, #seuraava3, 
