--- a/elaintieto.css
+++ b/elaintieto.css
@@ -1,7 +1,7 @@
 #content {
     font-family:sans-serif;
 }
-
+/* tyyli ja pää värit by Mikael Rekinen, sovitetaan vielä yhteen */
 header {
     display: flex;
     height: 200px;
